--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,22 @@
     0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
 }
 
+.calendar {
+  @apply mx-auto rounded-lg overflow-hidden;
+}
+
+.button_success {
+  @apply border p-2 border-teal-300 bg-gradient-to-tr from-teal-300 to-green-400 rounded-md;
+}
+
+.button_warning {
+  @apply border p-2 border-rose-400 bg-gradient-to-tr from-rose-400 to-red-400 rounded-md;
+}
+
+.button_action {
+  @apply border p-2 border-indigo-400 bg-gradient-to-tr from-indigo-400 to-violet-500 rounded-md;
+}
+
 .button {
   @apply w-8 h-8 p-2 rounded-full bg-gradient-to-br from-violet-400 to-70% to-violet-500 shadow-sm;
   box-shadow: inset 0 0 0 #fff;
